Add PushNotification with customKey (NEED SOME WORK TO HANDLE IT TO GET POST DETAIL FROM API)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,9 +36,23 @@
             android:label="@string/title_activity_about_us"
             android:theme="@style/FullscreenTheme"></activity>
 
+
+        <activity android:name="com.papyrus.bshairwebapp.Ui.SingleNewsFromPush"
+            android:configChanges="orientation|screenSize"/>
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="4a453df463908b2235acc05282cdace47c9e4501" />
+
+        <meta-data android:name="com.onesignal.NotificationOpened.DEFAULT" android:value="DISABLE" />
+        <service
+            android:name="com.papyrus.bshairwebapp.PushNotification.NotificationExtenderExample"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.onesignal.NotificationExtender" />
+            </intent-filter>
+        </service>
     </application>
+
 
 </manifest>
